<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Movies App</string>

    <string name="movie_name">Movie Name</string>
    <string name="movie_trailer">Movie Trailer</string>
    <string name="movie_length">1h 26m</string>
    <string name="movie_genres">Horror,Thriller,Comedy</string>
    <string name="cast_name">Cast Name</string>
    <string name="character_name">Character Name</string>
    <string name="overview_heading">Overview</string>
    <string name="rating_heading">Ratings</string>
    <string name="additional_info_heading">Additional Info:</string>
    <string name="overview_details">Overview Details</string>
    <string name="out_of_rating">/10</string>
    <string name="rating_example">8.1</string>
    <string name="rating_voters">7,856</string>
    <string name="original_title_label">Original Title:</string>
    <string name="director_label">Director:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="status_label">Status:</string>
    <string name="budget_label">Budget:</string>
    <string name="revenue_label">Revenue:</string>
    <string name="original_title_example">Interstellar</string>
    <string name="director_example">Christopher Nolan</string>
    <string name="release_date_example">2014-09-07</string>
    <string name="status_example">Released</string>
    <string name="budget_example">$76,000,000</string>
    <string name="revenue_example">$100,000,000</string>
    <string name="background_movie_poster">Background Movie Poster</string>
    <string name="main_movie_poster">Main Movie Poster</string>
    <string name="cast_image">Cast Image</string>
    <string name="add_favourite_button">Add Favourite Button</string>

    <string name="voter_image">Voter Image</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="transition_photo">transition_photo</string>

    <string name="review_author">Author:\u0020</string>
    <string name="review_author_name">Author Name</string>
    <string name="updated_on">Updated on:\u0020</string>
    <string name="update_date_example">Feb 6, 2021</string>
    <string name="review_content">Review Content</string>
    <string name="rating_star">Rating Star</string>

    <string name="trailer_thumbnail">Trailer Thumbnail</string>
    <string name="play_button">Play Button</string>

    <string name="cast_not_found">Cast names are not available</string>
    <string name="videos_not_found">No videos found</string>
    <string name="reviews_not_found">No reviews found</string>

    <string name="msg_sent_info">Check this movie out:\u0020</string>
    <string name="next_line">\n</string>
    <string name="share_intent_text_type">text/plain</string>

    <string name="genre_delimiter">,\u0020</string>

    <string name="runtime_format">
        <xliff:g id="hours">%01d</xliff:g>h
        <xliff:g id="minutes">%01d</xliff:g>m
    </string>
    <string name="runtime_format_hours">
        <xliff:g id="hours">%01d</xliff:g>h
    </string>
    <string name="runtime_format_minutes">
        <xliff:g id="minutes">%01d</xliff:g>m
    </string>
    <string name="action_home">Home</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_share_title">Share</string>
    <string name="action_settings">Settings</string>

    <string name="pref_sort_by_default" translatable="false">popular</string>

    <string name="pref_sort_by_title">Sort By</string>
    <string name="pref_sort_by_title_value" translatable="false">sort_by</string>

    <string name="pref_sort_by_options_popular">Popular</string>
    <string name="pref_sort_by_options_top_rated">Top Rated</string>
    <string name="pref_sort_by_options_now_playing">Now Playing</string>
    <string name="pref_sort_by_options_upcoming">Upcoming</string>

    <string name="pref_sort_by_values_popular" translatable="false">popular</string>
    <string name="pref_sort_by_values_top_rated" translatable="false">top_rated</string>
    <string name="pref_sort_by_values_now_playing" translatable="false">now_playing</string>
    <string name="pref_sort_by_values_upcoming" translatable="false">upcoming</string>

    <string name="msg_internet_not_available">Could not connect to internet. \nMake sure you have an active internet connection</string>
    <string name="no_favourites_found">No favourite movies found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Favorite</string>
</resources>