<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_900"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:context=".detailactivity.DetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:cardElevation="12dp"
                app:cardBackgroundColor="@color/grey_light"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="32dp">

                    <TextView
                        style="@style/information_heading"
                        android:text="@string/overview_heading" />

                    <TextView
                        android:id="@+id/detail_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        tools:text="@string/overview_details" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardElevation="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="@color/grey_light"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="32dp">

                    <TextView
                        style="@style/information_heading"
                        android:text="@string/rating_heading" />

                    <com.iarcuschin.simpleratingbar.SimpleRatingBar
                        android:id="@+id/review_rating_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="1"
                        app:srb_fillColor="@color/golden_stars"
                        app:srb_numberOfStars="10"
                        app:srb_starBorderWidth="2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/movie_rating_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:text="@string/rating_example" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/out_of_rating"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:contentDescription="@string/voter_image"
                            android:src="@drawable/ic_baseline_person_24" />

                        <TextView
                            android:id="@+id/movie_voters"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            tools:text="@string/rating_voters" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardElevation="12dp"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/grey_light"
                app:cardCornerRadius="20dp"
                app:contentPadding="32dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textview"
                        style="@style/information_heading"
                        android:text="@string/additional_info_heading"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/original_title"
                        style="@style/additional_info_text1"
                        android:layout_marginTop="8dp"
                        android:text="@string/original_title_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textview" />

                    <TextView
                        android:id="@+id/details_original_movie_title"
                        style="@style/additional_info_text2"
                        android:layout_marginStart="42dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/release_date"
                        app:layout_constraintTop_toTopOf="@+id/original_title"
                        tools:text="@string/original_title_example" />

                    <TextView
                        android:id="@+id/director"
                        style="@style/additional_info_text1"
                        android:text="@string/director_label"
                        app:layout_constraintStart_toStartOf="@+id/original_title"
                        app:layout_constraintTop_toBottomOf="@+id/details_original_movie_title" />

                    <TextView
                        android:id="@+id/detail_movie_director_name"
                        style="@style/additional_info_text2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/details_original_movie_title"
                        app:layout_constraintTop_toBottomOf="@+id/details_original_movie_title"
                        tools:text="@string/director_example" />

                    <TextView
                        android:id="@+id/release_date"
                        style="@style/additional_info_text1"
                        android:text="@string/release_date_label"
                        app:layout_constraintStart_toStartOf="@+id/director"
                        app:layout_constraintTop_toBottomOf="@+id/detail_movie_director_name" />

                    <TextView
                        android:id="@+id/detail_movie_release_date"
                        style="@style/additional_info_text2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/detail_movie_director_name"
                        app:layout_constraintTop_toTopOf="@+id/release_date"
                        tools:text="@string/release_date_example" />

                    <TextView
                        android:id="@+id/status"
                        style="@style/additional_info_text1"
                        android:text="@string/status_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_movie_release_date" />

                    <TextView
                        android:id="@+id/movie_detail_status"
                        style="@style/additional_info_text2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/detail_movie_release_date"
                        app:layout_constraintTop_toTopOf="@+id/status"
                        tools:text="@string/status_example" />

                    <TextView
                        android:id="@+id/budget"
                        style="@style/additional_info_text1"
                        android:text="@string/budget_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movie_detail_status" />

                    <TextView
                        android:id="@+id/movie_detail_budget"
                        style="@style/additional_info_text2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/movie_detail_status"
                        app:layout_constraintTop_toTopOf="@+id/budget"
                        tools:text="@string/budget_example" />

                    <TextView
                        android:id="@+id/revenue"
                        style="@style/additional_info_text1"
                        android:text="@string/revenue_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movie_detail_budget" />

                    <TextView
                        android:id="@+id/movie_detail_revenue"
                        style="@style/additional_info_text2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/movie_detail_budget"
                        app:layout_constraintTop_toTopOf="@+id/revenue"
                        tools:text="@string/revenue_example" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</layout>