<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="12dp"
        app:cardBackgroundColor="@color/grey_light"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/author_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_author"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/author_label"
                app:layout_constraintStart_toEndOf="@+id/author_label"
                tools:text="@string/review_author_name" />

            <TextView
                android:id="@+id/updated_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_on"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/author_name"
                app:layout_constraintEnd_toStartOf="@+id/updated_on_date" />

            <TextView
                android:id="@+id/updated_on_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/updated_label"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/update_date_example" />

            <ImageView
                android:id="@+id/user_rating_star"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/rating_star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/author_label"
                app:srcCompat="@drawable/rating_star" />

            <TextView
                android:id="@+id/user_review_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/user_rating_star"
                app:layout_constraintStart_toEndOf="@+id/user_rating_star"
                app:layout_constraintTop_toTopOf="@+id/user_rating_star"
                tools:text="@string/rating_example" />

            <TextView
                android:id="@+id/review_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_of_rating"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/user_review_rating"
                app:layout_constraintStart_toEndOf="@+id/user_review_rating"
                app:layout_constraintTop_toTopOf="@+id/user_review_rating" />

            <TextView
                android:id="@+id/review_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_rating_star"
                tools:text="@string/review_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>