<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detailactivity.DetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:contentScrim="@color/background_blue"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_blue">

                    <ImageView
                        android:id="@+id/detail_movie_back_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/background_movie_poster"
                        android:minHeight="200dp"
                        android:scaleType="center"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/detail_movie_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@+id/detail_movie_main_image"
                        app:layout_constraintTop_toBottomOf="@+id/fab"
                        tools:text="@string/movie_name" />

                    <TextView
                        android:id="@+id/detail_movie_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="@+id/detail_movie_name"
                        app:layout_constraintTop_toBottomOf="@+id/detail_movie_name"
                        tools:text="@string/movie_length" />

                    <TextView
                        android:id="@+id/detail_movie_genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:maxLines="2"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="@+id/detail_movie_runtime"
                        app:layout_constraintTop_toBottomOf="@+id/detail_movie_runtime"
                        tools:text="@string/movie_genres" />

                    <ImageView
                        android:id="@+id/detail_movie_main_image"
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:layout_marginStart="32dp"
                        android:background="@drawable/rectangle"
                        android:contentDescription="@string/main_movie_poster"
                        android:padding="1dp"
                        app:layout_constraintBottom_toBottomOf="@+id/detail_movie_back_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_movie_back_image" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:backgroundTint="@color/fab_color"
                        android:contentDescription="@string/add_favourite_button"
                        android:onClick="onFavouriteClick"
                        app:layout_constraintBottom_toBottomOf="@+id/detail_movie_back_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_movie_back_image" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_blue"
                app:tabMode="scrollable" />

        </com.google.android.material.appbar.AppBarLayout>

        <include
            android:id="@+id/view_pager_details"
            layout="@layout/view_pager_details" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>